# libtrihlav

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: trh_dbus.h  trh_logger.h  trh_std.h  trh_timer.h  trihlav.h
src/: trh_dbus.c  trh_logger.c  trh_std.c  trh_timer.c  trihlav.c
